[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
brotli = "3.5.0"
flate2 = "1.0.28"
pyo3 = "0.20.0"
reqwest = { version = "0.12.2", features = ["blocking", "json", "socks"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.37.0"
