[package]
name = "pygrab_ll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pygrab_ll"
crate-type = ["cdylib"]

[dependencies]
brotli = "6.0.0"
flate2 = "1.0.28"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
reqwest = { version = "0.12.5", features = ["blocking", "json", "socks"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
